[gd_scene load_steps=12 format=3 uid="uid://bvvb08ueug3f5"]

[ext_resource type="Script" uid="uid://orgeq2888yy8" path="res://src/character/character.gd" id="1_adhfm"]
[ext_resource type="Script" uid="uid://cx02tvmol43rj" path="res://src/character/character_sprite.gd" id="2_ugqs2"]
[ext_resource type="Texture2D" uid="uid://x6yxorfmb7pj" path="res://assets/character_template.png" id="3_hx151"]
[ext_resource type="AnimationLibrary" uid="uid://df2bo6bawi54v" path="res://src/items/sword/sword_animation.res" id="4_56uj1"]
[ext_resource type="AnimationLibrary" uid="uid://bik0f5cvqasrr" path="res://src/character/character_movement.res" id="4_a5pac"]
[ext_resource type="PackedScene" uid="uid://dwtj0afn88aat" path="res://src/ui/ui_inspect_node.tscn" id="4_hx151"]
[ext_resource type="Script" uid="uid://xkofkxdheath" path="res://src/character/ui_character_inspect.gd" id="5_0rvpn"]
[ext_resource type="Script" uid="uid://du4371e1ury1v" path="res://src/character/attack_timer.gd" id="7_fi36g"]

[sub_resource type="Animation" id="Animation_a5pac"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m366t"]
_data = {
&"RESET": SubResource("Animation_a5pac")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1l1n4"]
radius = 8.0
height = 64.0

[node name="Character" type="CharacterBody2D" groups=["character"]]
collision_layer = 2
script = ExtResource("1_adhfm")

[node name="CharacterSprite" type="Node2D" parent="."]
scale = Vector2(8, 8)
script = ExtResource("2_ugqs2")

[node name="ArmL" type="Node2D" parent="CharacterSprite"]

[node name="HandL" type="Node2D" parent="CharacterSprite/ArmL"]
position = Vector2(0, 6)

[node name="HandSprite" type="Sprite2D" parent="CharacterSprite/ArmL/HandL"]
rotation = -3.14159
texture = ExtResource("3_hx151")
hframes = 6
vframes = 4
frame = 2

[node name="HeldItemL" type="Node2D" parent="CharacterSprite/ArmL/HandL"]
unique_name_in_owner = true
position = Vector2(-0.2, 0)
rotation = -1.5708

[node name="Body" type="Sprite2D" parent="CharacterSprite"]
texture = ExtResource("3_hx151")
hframes = 3
vframes = 2

[node name="Eyes" type="Sprite2D" parent="CharacterSprite"]
position = Vector2(2.84217e-14, -7)
rotation = -0.00042289
texture = ExtResource("3_hx151")
hframes = 6
vframes = 8
frame = 17

[node name="ArmR" type="Node2D" parent="CharacterSprite"]
rotation = 0.785398

[node name="HandR" type="Node2D" parent="CharacterSprite/ArmR"]

[node name="HeldItemR" type="Node2D" parent="CharacterSprite/ArmR/HandR"]
unique_name_in_owner = true
position = Vector2(0.2, 6.035)

[node name="HandSprite" type="Sprite2D" parent="CharacterSprite/ArmR/HandR"]
position = Vector2(0, -2)
texture = ExtResource("3_hx151")
offset = Vector2(0, 8)
hframes = 6
vframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterSprite"]
deterministic = true
libraries = {
&"": SubResource("AnimationLibrary_m366t"),
&"character_movement": ExtResource("4_a5pac"),
&"sword_animation": ExtResource("4_56uj1")
}

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="CharacterSprite"]
active = false
reset_on_save = false
libraries = {
&"sword": ExtResource("4_56uj1")
}

[node name="FeetHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 72)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_1l1n4")

[node name="AttackStart" type="Timer" parent="."]

[node name="UICharacterInspect" parent="." node_paths=PackedStringArray("character", "anchor_node") instance=ExtResource("4_hx151")]
unique_name_in_owner = true
script = ExtResource("5_0rvpn")
character = NodePath("..")
anchor_node = NodePath("../CharacterSprite")

[node name="AttackTimer" type="Node" parent="."]
script = ExtResource("7_fi36g")

[connection signal="timeout" from="AttackStart" to="." method="_on_attack_start_timeout"]
